--- a/app/manifest.json
+++ b/app/manifest.json
@@ -2,7 +2,7 @@
   "name": "Datadog-to-Terraform Converter",
   "version": "3.6.0",
   "description": "Converts Datadog resource JSON into Terraform alarm code.",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "browser_action": {
     "default_popup": "popup.html"
   },
@@ -10,5 +10,20 @@
     "16": "icon-16.png",
     "48": "icon-48.png",
     "128": "icon-128.png"
-  }
+  },
+  "permissions": [
+    "activeTab"
+  ],
+  "content_scripts": [
+    {
+      "matches": ["https://app.datadoghq.*/dashboard/*"],
+      "run_at": "document_idle",
+      "js": ["./export/dashboard-to-terraform.js"]
+    },
+    {
+      "matches": ["https://app.datadoghq.*/monitors/*"],
+      "run_at": "document_idle",
+      "js": ["./export/monitor-to-terraform.js"]
+    }
+  ]
 }
