--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "scripts": {
-    "test": "jest"
-  },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/preset-env": "^7.12.16",
-    "babel-jest": "^26.6.3",
-    "eslint-plugin-jest": "^24.1.3",
+    "@babel/cli": "^7.15.4",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.4",
+    "babel-jest": "^27.1.0",
+    "eslint-plugin-jest": "^24.4.0",
     "husky": "4.3.0",
-    "jest": "^26.6.3",
-    "lint-staged": "10.3.0",
-    "prettier": "2.1.1"
+    "jest": "^27.1.0",
+    "lint-staged": "^11.1.2",
+    "prettier": "^2.3.2"
   },
   "husky": {
     "hooks": {
@@ -19,5 +17,10 @@
   },
   "lint-staged": {
     "**/*": "yarn prettier --write --ignore-unknown"
+  },
+  "scripts": {
+    "build": "rm -f lib/*; babel app -d lib",
+    "convert": "node lib/cli.js",
+    "test": "jest"
   }
 }
