--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "**/*": "yarn prettier --write --ignore-unknown"
   },
   "scripts": {
-    "build": "rm -f lib/*; babel app -d lib",
-    "convert": "node lib/cli.js",
+    "cleanup": "del -f lib\\*",
+    "build": "babel app -d lib",
+    "convert": "node lib\\cli.js",
     "test": "jest"
   }
 }
